vlib/v/checker/tests/cannot_cast_to_struct.out
vlib/v/checker/tests/cannot_cast_to_struct.vv:12:7: warning: casting to struct is deprecated, use e.g. `Struct{...expr}` instead
   10 | 
   11 | fn main() {
   12 |     _ := Test(Abc{})
      |          ~~~~~~~~~~~
   13 |     sum := Alphabet(Xyz{})
   14 |     _ = Xyz(sum)
vlib/v/checker/tests/cannot_cast_to_struct.vv:12:7: error: cannot convert struct `Abc` to struct `Test`
   10 | 
   11 | fn main() {
   12 |     _ := Test(Abc{})
      |          ~~~~~~~~~~~
   13 |     sum := Alphabet(Xyz{})
   14 |     _ = Xyz(sum)
vlib/v/checker/tests/cannot_cast_to_struct.vv:14:6: error: cannot cast `Alphabet` to struct
   12 |     _ := Test(Abc{})
   13 |     sum := Alphabet(Xyz{})
   14 |     _ = Xyz(sum)
      |         ~~~~~~~~
   15 |     _ = Xyz(5)
   16 |     s := Abc{}
vlib/v/checker/tests/cannot_cast_to_struct.vv:14:6: error: cannot cast `Alphabet` sum type value to `Xyz`, use `sum as Xyz` instead
   12 |     _ := Test(Abc{})
   13 |     sum := Alphabet(Xyz{})
   14 |     _ = Xyz(sum)
      |         ~~~~~~~~
   15 |     _ = Xyz(5)
   16 |     s := Abc{}
vlib/v/checker/tests/cannot_cast_to_struct.vv:15:6: error: cannot cast `int literal` to struct
   13 |     sum := Alphabet(Xyz{})
   14 |     _ = Xyz(sum)
   15 |     _ = Xyz(5)
      |         ~~~~~~
   16 |     s := Abc{}
   17 |     _ = Xyz(&s)
vlib/v/checker/tests/cannot_cast_to_struct.vv:17:6: error: cannot cast `&Abc` to struct
   15 |     _ = Xyz(5)
   16 |     s := Abc{}
   17 |     _ = Xyz(&s)
      |         ~~~~~~~
   18 | }
